--- a/css/contact.css
+++ b/css/contact.css
@@ -4,7 +4,7 @@
 }
 .contact-title {
     width: 100%;
-    height: 250px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,18 +13,58 @@
 }
 .contact-title h2 {
     color: white;
-    font-size: 67px;
+    font-size: 48px;
 }
 .contact-form-container {
-    width: 70%;
+    padding-top: 30px;
+    width: 60%;
     margin: 0 auto;
 }
-.form-items {
-
-}
 .form-item {
+    padding: 30px 5em;
+    display: grid;
+    grid-template-columns: 30% 70%;
     border-bottom: 1px dashed #333;
 }
 .form-item:last-child {
     border-bottom: none;
+}
+.form-label {
+    padding-top: 15px;
+    font-size: 18px;
+}
+.form-item input {
+    padding: 10px;
+    font-size: 18px;
+}
+.form-item textarea {
+    padding: 10px;
+    font-size: 18px;
+}
+.send {
+    padding: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.send-btn {
+    color: white;
+    font-size: 18px;
+    padding: 5px 80px;
+    border-radius: 15px;
+    background-color: #213F8A;
+    cursor: pointer;
+}
+
+
+@media screen and (max-width:480px) {
+    .contact-title h2 {
+        /* color: white; */
+        font-size: 28px;
+    }
+    .contact-form-container {
+        padding-top: 30px;
+        width: 90%;
+        margin: 0 auto;
+    }
 }
