--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,17 @@ html {
     position: relative;
 }
 
+.icon {
+    display: none;
+}
+
 /* HEADER */
 header {
+    width: 100%;
     padding-top: 50px;
     padding-right: 55px;
+    position: absolute;
+    z-index: 1;
 }
 nav {
     display: flex;
@@ -53,7 +60,7 @@ nav {
     opacity: 0.7;
 }
 .nav-list li a {
-    font-size: 24px;
+    font-size: 20px;
     color: white;
     position: relative;
 }
@@ -237,10 +244,6 @@ nav {
     color: #1E416B;
     letter-spacing: .3em;
 }
-
-.vision-items {
-
-}
 .vision-item {
     display: flex;
 }
@@ -336,22 +339,28 @@ nav {
 .contact-mail h4 {
     color: white;
     font-size: 26px;
-
+    font-family: 'Century Gothic';
+    font-weight: 400;
 }
 .contact-mail p {
-    border: 1px solid white;
-    padding: 15px;
     margin-top: 40px;
-    transition: .9s;
     cursor: pointer;
-}
-.contact-mail p:hover {
-    opacity: 0.6;
 }
 .contact-mail p a {
     color: white;
     font-size: 14px;
-
+    padding: 15px;
+    transition: .9s;
+    display: inline-block;
+    border: 1px solid white;
+}
+.contact-mail p a:hover {
+    color: #213F8A;
+    font-weight: 600;
+    background-color: #fff;
+    border: 1px solid #333;
+    opacity: 0.8;
+    
 }
 /* CONTACT */
 
@@ -408,12 +417,28 @@ footer {
     padding-right: 40px;
 }
 /* FOOTER */
+
+/* ICON TO TOP */
+.fa-angle-up {
+    padding: 10px 15px;
+    color: #fff;
+    font-size: 18px;
+    position: fixed;
+    bottom: 50px;
+    right: 60px;
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0.81);
+}
+
 /* BODY */
 
 
 /* FOR IPHONE */
 
 @media screen and (max-width:480px) {
+    body {
+        position: relative;
+    }
 
     /* TOP */
     .top {
@@ -421,34 +446,84 @@ footer {
         height: 100vh;
         background-image: url(../img/main480.jpg);
         background-size: cover;
-        position: relative;
     }
 
     /* HEADER */
     header {
-        display: none;
-        padding-top: 50px;
-        padding-right: 55px;
+        width: 100%;
+        height: 100vh;
+        padding-top: 0;
+        padding-right: 0;
+        /* position: relative; */
+    }
+    .icon {
+        width: 35px;
+        height: 35px;
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        z-index: 4;
+        background-color: blue;
+        
+    } 
+    .humburger {
+        position: absolute;
+        top: 17px;
+        right: 2px;
+        width: 30px;
+        height: 2px;
+        background-color: #fff;
+    }
+    .humburger:before,
+    .humburger:after {
+        content: '';
+        width: 30px;
+        height: 2px;
+        position: absolute;
+        background-color: #fff;
+    }
+    .humburger:before {
+        top: -10px;
+    }
+    .humburger:after {
+        top: 10px;
     }
     nav {
         display: flex;
-        justify-content: flex-end;
+        justify-content: unset;
     }
-
+    .nav-bar .menu-lists-active {
+        left: 0;
+    }
+    .nav-list {
+        width: 75%;
+        height: 100%;
+        padding-top: 6em;
+        position: fixed;
+        top: 0;
+        left: -75%;
+        background-color: rgba(0, 0, 0, 0.81);
+        z-index: 2;
+    }
     .nav-list li {
-        display: inline-block;
+        display: block;
+        padding-left: 3em;
+        padding-bottom: 3em;
         text-shadow: 2px 2px black;
-        margin-right: 40px;
+        margin-right: 0;
     }
     .nav-list li:last-child {
-        padding: 10px;
-        border: 3px solid white;
-        box-shadow: 
-        2px 2px, 2px 2px inset;
+        padding: 0;
+        padding-left: 3em;
+        border: unset;
+        box-shadow: unset;
     }
     .nav-list li a {
-        font-size: 24px;
+        padding-left: 0;
+        font-size: 18px;
         color: white;
+        border: unset;
     }
     /* HEADER */
 
@@ -733,8 +808,22 @@ footer {
     .footer-table-right tr td:first-child {
         padding-right: 15px;
     }
-
     /* FOOTER */
+
+    /* ICON TO TOP */
+.fa-angle-up {
+    padding: 6px 10px;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 100;
+    position: fixed;
+    bottom: .5em;
+    right: .5em;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.81);
+}
+
 
 }
 
@@ -980,10 +1069,10 @@ footer {
     .vision-title {
         padding-top: 65px;
     }
-    .vision-title h2 {
-        /* font-size: 26px; */
-        /* letter-spacing: .3em; */
-    }
+    /* .vision-title h2 {
+        font-size: 26px;
+        letter-spacing: .3em;
+    } */
     .vistion-items {
         width: 90%;
         margin: 0 auto;
