--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@ html {
     scroll-behavior: smooth;
 }
 
+/* モーダルopen時に背景をスクロールできないようにする為。 */
+body.fixed {
+    overflow: hidden;
+}
+
 
 /* BODY */
 
@@ -464,8 +469,6 @@ footer {
         top: 20px;
         right: 20px;
         z-index: 4;
-        background-color: blue;
-        
     } 
     .humburger {
         position: absolute;
@@ -493,7 +496,7 @@ footer {
         display: flex;
         justify-content: unset;
     }
-    .nav-bar .menu-lists-active {
+    .menu-bar .menu-lists-active {
         left: 0;
     }
     .nav-list {
@@ -502,9 +505,11 @@ footer {
         padding-top: 6em;
         position: fixed;
         top: 0;
-        left: -75%;
+        /* left: -75%; */
+        
         background-color: rgba(0, 0, 0, 0.81);
         z-index: 2;
+        transition: .5s;
     }
     .nav-list li {
         display: block;
