--- a/css/main.css
+++ b/css/main.css
@@ -505,8 +505,8 @@ footer {
         padding-top: 6em;
         position: fixed;
         top: 0;
-        /* left: -75%; */
-        
+        left: -75%;
+
         background-color: rgba(0, 0, 0, 0.81);
         z-index: 2;
         transition: .5s;
